SOC/2010/bit_masks/lib/integer/test/bft_testing/compile_pass/fusion_includes.cpp
//  Copyright 2010 Brian Bartman.
//  Distributed under the Boost Software License, Version 1.0.
//  (See accompanying file LICENSE_1_0.txt or copy at 
//  http://www.boost.org/LICENSE_1_0.txt)

#include <iostream>
#include <boost/integer/bitfield_tuple.hpp>

using namespace boost;

// Testing to see if the include paths work correctly.
#include <boost/integer/details/bft/ext/bitfield_tuple_fusion_includes.hpp>

int main() { return 0; }
